# HAT-f

./: .gitmodules  AGENTS.md  README.md  README.md.old  predict.py  pyproject.toml  setup.py
hat/: test.py  train.py
hat/archs/: __init__.py  hat_arch.py
hat/data/: __init__.py  imagenet_paired_dataset.py  realesrgan_dataset.py
hat/models/: __init__.py  hat_model.py  realhatgan_model.py  realhatmse_model.py
notes/: gradient-accumulation.md  new-optimizers.md  torch-compile-modes.md
options/train/: train_HAT_SRx4_ImageNet_from_scratch.yml
scripts/: batch_infer.py  bench_train_speed.py  prep_dataset.py  profile_train_step.py
tests/: test_batch_infer.py
training-config/: AnimeHAT-L_SRx4_finetune_from_ImageNet_pretrain.yml  AnimeHAT_SRx4_finetune.yml  train_HAT-L_SRx4_finetune_from_ImageNet_pretrain.yml
