[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hat"
dynamic = ["version"]
description = "HAT - Activating More Pixels in Image Super-Resolution Transformer"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Xiangyu Chen", email = "chxy95@gmail.com"},
]
keywords = ["computer vision", "pytorch", "basicsr", "image restoration", "super-resolution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "einops",
    "torch>=2.0",
    "basicsr",
    "click",
]

[project.urls]
Homepage = "https://github.com/chxy95/HAT"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["options", "datasets", "experiments", "results", "tb_logger", "wandb"]

[tool.setuptools.package-data]
hat = ["data/meta_info/*.txt"]

[tool.flake8]
ignore = ["W503", "W504"]
max-line-length = 120

[tool.yapf]
based_on_style = "pep8"
column_limit = 120
blank_line_before_nested_class_or_def = true
split_before_expression_after_opening_paren = true

[tool.isort]
line_length = 120
multi_line_output = 0
known_standard_library = ["pkg_resources", "setuptools"]
known_first_party = ["basicsr"]
known_third_party = ["cv2", "requests", "torch", "torchvision"]
no_lines_before = ["STDLIB", "LOCALFOLDER"]
default_section = "THIRDPARTY"
